--- a/School Administration Project/PL/Home Screen.xaml
+++ b/School Administration Project/PL/Home Screen.xaml
@@ -7,7 +7,7 @@
         Left="0" Top="0"
         Title="School Administration System" Height="700" Width="1167" MaxHeight="700" MaxWidth="1167" MinHeight="700" MinWidth="1167">
     <Grid>
-        <Button Content="Admission" HorizontalAlignment="Left" Margin="312,193,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Admission"/>
+        <Button Content="Admission" HorizontalAlignment="Left" Margin="180,193,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Admission"/>
         <Dialogs:CustomDialog Content="HOME" VerticalAlignment="Top" FontSize="90" Margin="-44,3,647,0" HorizontalAlignment="Center" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="556" FontFamily="Segoe UI Black" Height="154" FontWeight="Bold">
             <Dialogs:CustomDialog.RenderTransform>
                 <TransformGroup>
@@ -18,12 +18,13 @@
                 </TransformGroup>
             </Dialogs:CustomDialog.RenderTransform>
         </Dialogs:CustomDialog>
-        <Button Content="Attendance" HorizontalAlignment="Left" Margin="312,301,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Attendance"/>
-        <Button Content="Benefits" HorizontalAlignment="Left" Margin="593,301,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Benefits"/>
-        <Button Content="Exam Control" HorizontalAlignment="Left" Margin="593,193,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Exam_Control"/>
-        <Button Content="HR" HorizontalAlignment="Left" Margin="312,410,0,0" VerticalAlignment="Top" Width="238" Height="89" FontSize="26" Click="Button_HR"/>
-        <Button Content="Inventory" HorizontalAlignment="Left" Margin="593,410,0,0" VerticalAlignment="Top" Width="238" Height="89" FontSize="26" Click="Button_Inventory"/>
+        <Button Content="Attendance" HorizontalAlignment="Left" Margin="180,301,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Attendance"/>
+        <Button Content="Benefits" HorizontalAlignment="Left" Margin="461,301,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Benefits"/>
+        <Button Content="Exam Control" HorizontalAlignment="Left" Margin="461,193,0,0" VerticalAlignment="Top" Width="238" Height="90" FontSize="26" Click="Button_Exam_Control"/>
+        <Button Content="HR" HorizontalAlignment="Left" Margin="180,410,0,0" VerticalAlignment="Top" Width="238" Height="89" FontSize="26" Click="Button_HR"/>
+        <Button Content="Inventory" HorizontalAlignment="Left" Margin="461,410,0,0" VerticalAlignment="Top" Width="238" Height="89" FontSize="26" Click="Button_Inventory"/>
         <Button Content="Back" HorizontalAlignment="Left" Margin="387,543,0,0" VerticalAlignment="Top" Width="391" Height="71" FontSize="26" Click="Button_Back"/>
+        <Button Content="Accounts" HorizontalAlignment="Left" Margin="732,194,0,0" VerticalAlignment="Top" Width="238" Height="89" FontSize="26" Click="Button_Inventory"/>
 
     </Grid>
 </Controls:MetroWindow>
