--- a/School Administration Project/PL/HR Admin Body Recruitment.xaml
+++ b/School Administration Project/PL/HR Admin Body Recruitment.xaml
@@ -17,7 +17,7 @@
                 </TransformGroup>
             </Dialogs:CustomDialog.RenderTransform>
         </Dialogs:CustomDialog>
-        <Button Content="Back" HorizontalAlignment="Left" Margin="156,555,0,0" VerticalAlignment="Top" Width="391" Height="71" FontSize="26" Click="Button_Back"/>
+        <Button Content="Back" HorizontalAlignment="Left" Margin="156,555,0,0" VerticalAlignment="Top" Width="391" Height="71" FontSize="26" Click="Button_Back" IsCancel="True"/>
         <TextBlock HorizontalAlignment="Left" Margin="60,171,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="60,216,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="60,261,0,0" TextWrapping="Wrap" Text="Father's Name" VerticalAlignment="Top" FontSize="20"/>
@@ -26,33 +26,30 @@
         <TextBlock HorizontalAlignment="Left" Margin="60,396,0,0" TextWrapping="Wrap" Text="Blood Group" VerticalAlignment="Top" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="60,441,0,0" TextWrapping="Wrap" Text="Marital Status" VerticalAlignment="Top" FontSize="20"/>
         <TextBlock HorizontalAlignment="Left" Margin="60,486,0,0" TextWrapping="Wrap" Text="Date Of Birth" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,171,0,0" TextWrapping="Wrap" Text="Mobile Number" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,216,0,0" TextWrapping="Wrap" Text="Previous Institution" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,261,0,0" TextWrapping="Wrap" Text="Experience" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,306,0,0" TextWrapping="Wrap" Text="Designation" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,351,0,0" TextWrapping="Wrap" Text="Position Sought" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,396,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,441,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Left" Margin="596,486,0,0" TextWrapping="Wrap" Text="ID" VerticalAlignment="Top" FontSize="20"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="228,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="228,218,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="228,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="228,307,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="228,353,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="228,397,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,218,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,307,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,353,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,397,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,442,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
-        <TextBox HorizontalAlignment="Left" Height="26" Margin="796,486,0,0" TextWrapping="Wrap" Text="AUTO-GENERATED" VerticalAlignment="Top" Width="304" IsEnabled="False"/>
+        <TextBlock HorizontalAlignment="Left" Margin="596,216,0,0" TextWrapping="Wrap" Text="Mobile Number" VerticalAlignment="Top" FontSize="20"/>
+        <TextBlock HorizontalAlignment="Left" Margin="596,262,0,0" TextWrapping="Wrap" Text="Designation" VerticalAlignment="Top" FontSize="20"/>
+        <TextBlock HorizontalAlignment="Left" Margin="596,306,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" FontSize="20"/>
+        <TextBlock HorizontalAlignment="Left" Margin="596,351,0,0" TextWrapping="Wrap" Text="Email" VerticalAlignment="Top" FontSize="20"/>
+        <TextBlock HorizontalAlignment="Left" Margin="596,396,0,0" TextWrapping="Wrap" Text="ID" VerticalAlignment="Top" FontSize="20"/>
+        <TextBox x:Name="fn" HorizontalAlignment="Left" Height="26" Margin="228,172,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="ln" HorizontalAlignment="Left" Height="26" Margin="228,218,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="fa" HorizontalAlignment="Left" Height="26" Margin="228,262,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="mo" HorizontalAlignment="Left" Height="26" Margin="228,307,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="gen" HorizontalAlignment="Left" Height="26" Margin="228,353,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="bl" HorizontalAlignment="Left" Height="26" Margin="228,397,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="mob" HorizontalAlignment="Left" Height="26" Margin="796,217,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="des" HorizontalAlignment="Left" Height="26" Margin="796,263,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="add" HorizontalAlignment="Left" Height="26" Margin="796,307,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="email" HorizontalAlignment="Left" Height="26" Margin="796,352,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="304"/>
+        <TextBox x:Name="id" HorizontalAlignment="Left" Height="26" Margin="796,396,0,0" TextWrapping="Wrap" Text="AUTO-GENERATED" VerticalAlignment="Top" Width="304" IsEnabled="False"/>
 
-        <RadioButton GroupName="Marital Status" Content="Married" HorizontalAlignment="Left" Margin="248,442,0,0" VerticalAlignment="Top" Height="26" Width="113" FontSize="20"/>
-        <RadioButton GroupName="Marital Status" Content="Unmarried" HorizontalAlignment="Left" Margin="392,442,0,0" VerticalAlignment="Top" Height="26" Width="120" FontSize="20"/>
-        <DatePicker HorizontalAlignment="Left" Margin="228,490,0,0" VerticalAlignment="Top" Width="304"/>
+        <RadioButton x:Name="marr" GroupName="Marital Status" Content="Married" HorizontalAlignment="Left" Margin="248,442,0,0" VerticalAlignment="Top" Height="26" Width="113" FontSize="20"/>
+        <RadioButton x:Name="unmarr" GroupName="Marital Status" Content="Unmarried" HorizontalAlignment="Left" Margin="392,442,0,0" VerticalAlignment="Top" Height="26" Width="120" FontSize="20"/>
+        <DatePicker x:Name="dob" HorizontalAlignment="Left" Margin="228,490,0,0" VerticalAlignment="Top" Width="304"/>
         <Button Content="DONE" HorizontalAlignment="Left" Margin="611,555,0,0" VerticalAlignment="Top" Width="391" Height="71" FontSize="26" Click="Button_DONE"/>
+        <Controls:DropDownButton x:Name="religionList" HorizontalAlignment="Left" Margin="796,172,0,0" VerticalAlignment="Top" Height="27" Width="304"
+            />
+        <TextBlock HorizontalAlignment="Left" Margin="596,171,0,0" TextWrapping="Wrap" Text="Religion" VerticalAlignment="Top" FontSize="20"/>
 
     </Grid>
 </Controls:MetroWindow>
