Revert "major commit"
This reverts commit 0a3236adca8fb26d8861278abd8f8c99b31c3b72.

--- a/School Administration Project/PL/Admission.xaml
+++ b/School Administration Project/PL/Admission.xaml
@@ -21,7 +21,7 @@
         <Button Content="Written Exam Management" HorizontalAlignment="Left" Margin="419,358,0,0" VerticalAlignment="Top" Width="336" Height="93" FontSize="20" Click="Button_Written_Exam_Management"/>
         <Button Content="Viva Exam Management" HorizontalAlignment="Left" Margin="67,358,0,0" VerticalAlignment="Top" Width="297" Height="93" FontSize="20" Click="Button_Viva_Exam_Management"/>
         <Button Content="Admission Eligibility" HorizontalAlignment="Left" Margin="419,231,0,0" VerticalAlignment="Top" Width="336" Height="93" FontSize="20" Click="Button_Result_Management"/>
-        <Button Content="BACK" HorizontalAlignment="Left" Margin="387,543,0,0" VerticalAlignment="Top" Width="391" Height="71" FontSize="26" Click="Button_Back" IsCancel="True"/>
+        <Button Content="BACK" HorizontalAlignment="Left" Margin="387,543,0,0" VerticalAlignment="Top" Width="391" Height="71" FontSize="26" Click="Button_Back"/>
         <Button Content="ADMISSION STUDENT LIST" HorizontalAlignment="Left" Margin="811,231,0,0" VerticalAlignment="Top" Width="297" Height="93" FontSize="20" Click="Eligible_Student_List"/>
         <Button Content="New Student" HorizontalAlignment="Left" Margin="811,358,0,0" VerticalAlignment="Top" Width="297" Height="93" FontSize="20" Click="Admit_New_Student"/>
 
